==> oopuuu/zTC1/mico-os/platform/MCU/LPC5410x/peripherals/platform_flash.c <==
#include "platform_logging.h"
#include "platform_peripheral.h"
#include "platform.h"
#include "platform_config.h"
#include "stdio.h"
#include "spi_flash.h"
#define ADDR_FLASH_SECTOR_0     ((uint32_t)0x00000000) /* Base @ of Sector  0, 32 Kbyte */
#define ADDR_FLASH_SECTOR_1     ((uint32_t)0x00008000) /* Base @ of Sector  1, 32 Kbyte */
#define ADDR_FLASH_SECTOR_2     ((uint32_t)0x00010000) /* Base @ of Sector  2, 32 Kbyte */
#define ADDR_FLASH_SECTOR_3     ((uint32_t)0x00018000) /* Base @ of Sector  3, 32 Kbyte */
#define ADDR_FLASH_SECTOR_4     ((uint32_t)0x00020000) /* Base @ of Sector  4, 32 Kbyte */
#define ADDR_FLASH_SECTOR_5     ((uint32_t)0x00028000) /* Base @ of Sector  5, 32 Kbyte */
#define ADDR_FLASH_SECTOR_6     ((uint32_t)0x00030000) /* Base @ of Sector  6, 32 Kbyte */
#define ADDR_FLASH_SECTOR_7     ((uint32_t)0x00038000) /* Base @ of Sector  7, 32 Kbyte */
#define ADDR_FLASH_SECTOR_8     ((uint32_t)0x00040000) /* Base @ of Sector  8, 32 Kbyte */
#define ADDR_FLASH_SECTOR_9     ((uint32_t)0x00048000) /* Base @ of Sector  9, 32 Kbyte */
#define ADDR_FLASH_SECTOR_10    ((uint32_t)0x00050000) /* Base @ of Sector 10, 32 Kbyte */
#define ADDR_FLASH_SECTOR_11    ((uint32_t)0x00058000) /* Base @ of Sector 11, 32 Kbyte */
#define ADDR_FLASH_SECTOR_12    ((uint32_t)0x00060000) /* Base @ of Sector 12, 32 Kbyte */
#define ADDR_FLASH_SECTOR_13    ((uint32_t)0x00068000) /* Base @ of Sector 13, 32 Kbyte */

OSStatus internalFlashInitialize( void )
{
  platform_log_trace();
//  FLASH_Unlock();
//  /* Clear pending flags (if any) */
//  FLASH_ClearFlag(FLASH_FLAG_EOP | FLASH_FLAG_OPERR | FLASH_FLAG_WRPERR |
//                  FLASH_FLAG_PGAERR | FLASH_FLAG_PGPERR|FLASH_FLAG_PGSERR);

  s_intflash_offset=0;
#ifdef BOOTLOADER
  s_wlast_buff_datacount=0;
  s_wlast_buff_flashaddr=0;
  s_flashwritecount=0;
#endif
  return kNoErr;
}

OSStatus internalFlashErase(uint32_t StartAddress, uint32_t EndAddress)
{
  platform_log_trace();
  OSStatus err = kNoErr;
  uint32_t StartSector, EndSector, i = 0, j = 0, ret_code;	// Magicoe added ret_code

  /* Get the sector where start the user flash area */
  StartSector = _GetSector(StartAddress);
  EndSector = _GetSector(EndAddress);
  for(i = StartSector; i <= EndSector; i ++)
  {
    /* Device voltage range supposed to be [2.7V to 3.6V], the operation will
    be done by word */
    _GetAddress(i, &StartAddress, &EndAddress);
    for(j=StartAddress; j<=EndAddress; j+=8){
      if( (*(uint32_t *)(j))!=0xFFFFFFFF )
        break;
    }
    if( j>EndAddress )
      continue;
	ret_code = Chip_IAP_PreSectorForReadWrite(i, i);
	/* Error checking */
	if (ret_code != IAP_CMD_SUCCESS) {
		err = kWriteErr;
		return err;
		//DEBUGOUT("Command failed to execute, return code is: %x\r\n", ret_code);
	}
	ret_code = Chip_IAP_EraseSector(i, i);
	if (ret_code != IAP_CMD_SUCCESS) {
		err = kWriteErr;
		return err;
		//DEBUGOUT("Command failed to execute, return code is: %x\r\n", ret_code);
	}
   // require_action(FLASH_EraseSector(i, VoltageRange_3) == FLASH_COMPLETE, exit, err = kWriteErr);
  }

  return err;
}

OSStatus internalFlashWrite(volatile uint32_t* FlashAddress, uint32_t* Data ,uint32_t DataLength)
{
  platform_log_trace();
  OSStatus err = kNoErr;
  uint32_t i = 0;
  uint32_t StartSector;
  uint32_t DataLengthRemain = DataLength;
  uint32_t DataLengthWR = 0;
  uint8_t * ppage_buff=(uint8_t *)s_wpage_buff;
  uint8_t * pData = (uint8_t *) Data;

//  uint32_t wr_addr = (*FlashAddress) + s_intflash_offset;
  uint32_t wr_addr = (*FlashAddress);
   StartSector = _GetSector(wr_addr);
   {
       uint32_t dataPos=0;
       uint32_t startAddrPage = (wr_addr/256)*256;

       if(wr_addr%256)
       {
          uint32_t startAddrInPage = wr_addr%256;
        // for(i=0;i<s_wlast_page;i++)
         for(i=0;i<256;i++)
         {
           ppage_buff[i]= *((uint8_t*)(startAddrPage+i));
         }
         if(DataLength>(256-startAddrInPage))
           DataLengthWR=(256-startAddrInPage);
         else
           DataLengthWR =DataLength;
         for(i=0;i<DataLengthWR;i++)
         {
           ppage_buff[i+startAddrInPage]= *((uint8_t*)(pData+dataPos+i));
         }
         dataPos +=DataLengthWR;

         {
           StartSector = _GetSector(startAddrPage);

	   Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
//           Chip_IAP_ErasePage(startAddrPage/256,startAddrPage/256);
           Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
           Chip_IAP_CopyRamToFlash(startAddrPage, (uint32_t *)ppage_buff, 256);
           startAddrPage +=256;
           DataLengthRemain -=DataLengthWR;
         }

       }

       while(DataLengthRemain>0)
       {
         if(DataLengthRemain>=256)
         {
           StartSector = _GetSector(startAddrPage);
#ifndef BOOTLOADER
	   Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
//           Chip_IAP_ErasePage(startAddrPage/256,startAddrPage/256);
#endif
           Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
           Chip_IAP_CopyRamToFlash(startAddrPage, (uint32_t *)(pData+dataPos), 256);
           startAddrPage +=256;
           dataPos +=256;
           DataLengthRemain -=256;
         }else
         {
           for(i=0;i<256;i++)
           {
             ppage_buff[i]= *((uint8_t*)(startAddrPage+i));
           }

           for(i=0;i<DataLengthRemain;i++)
           {
             ppage_buff[i]= *((uint8_t*)(pData+dataPos+i));
           }

           StartSector = _GetSector(startAddrPage);
	   Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
//           Chip_IAP_ErasePage(startAddrPage/256,startAddrPage/256);
           Chip_IAP_PreSectorForReadWrite(StartSector, StartSector);
           //modify
//           Chip_IAP_CopyRamToFlash(startAddrPage, (uint32_t *)ppage_buff, 256);
           Chip_IAP_CopyRamToFlash(startAddrPage, (uint32_t *)ppage_buff, DataLengthRemain);
           DataLengthRemain =0;
         }
       }
   }

  s_intflash_offset +=DataLength;
  require_noerr(err, exit);

exit:
  return err;
}

static uint32_t _GetSector(uint32_t Address)
{
  uint32_t sector = 0;

  if(Address < ADDR_FLASH_SECTOR_1)/* && (Address >= ADDR_FLASH_SECTOR_0))*/
  {
    sector = 0;
  }
  else if((Address < ADDR_FLASH_SECTOR_2) && (Address >= ADDR_FLASH_SECTOR_1))
  {
    sector = 1;
  }
  else if((Address < ADDR_FLASH_SECTOR_3) && (Address >= ADDR_FLASH_SECTOR_2))
  {
    sector = 2;
  }
  else if((Address < ADDR_FLASH_SECTOR_4) && (Address >= ADDR_FLASH_SECTOR_3))
  {
    sector = 3;
  }
  else if((Address < ADDR_FLASH_SECTOR_5) && (Address >= ADDR_FLASH_SECTOR_4))
  {
    sector = 4;
  }
  else if((Address < ADDR_FLASH_SECTOR_6) && (Address >= ADDR_FLASH_SECTOR_5))
  {
    sector = 5;
  }
  else if((Address < ADDR_FLASH_SECTOR_7) && (Address >= ADDR_FLASH_SECTOR_6))
  {
    sector = 6;
  }
  else if((Address < ADDR_FLASH_SECTOR_8) && (Address >= ADDR_FLASH_SECTOR_7))
  {
    sector = 7;
  }
  else if((Address < ADDR_FLASH_SECTOR_9) && (Address >= ADDR_FLASH_SECTOR_8))
  {
    sector = 8;
  }
  else if((Address < ADDR_FLASH_SECTOR_10) && (Address >= ADDR_FLASH_SECTOR_9))
  {
    sector = 9;
  }
  else if((Address < ADDR_FLASH_SECTOR_11) && (Address >= ADDR_FLASH_SECTOR_10))
  {
    sector = 10;
  }
  else if((Address < ADDR_FLASH_SECTOR_12) && (Address >= ADDR_FLASH_SECTOR_11))
  {
    sector = 11;
  }
  else if((Address < ADDR_FLASH_SECTOR_13) && (Address >= ADDR_FLASH_SECTOR_12))
  {
    sector = 12;
  }
  else if((Address < ADDR_FLASH_SECTOR_14) && (Address >= ADDR_FLASH_SECTOR_13))
  {
    sector = 13;
  }
  else if((Address < ADDR_FLASH_SECTOR_15) && (Address >= ADDR_FLASH_SECTOR_14))
  {
    sector = 14;
  }
  else if((Address < ADDR_FLASH_SECTOR_16) && (Address >= ADDR_FLASH_SECTOR_15))
  {
    sector = 15;
  }
  else/*(Address < FLASH_END_ADDR) && (Address >= ADDR_FLASH_SECTOR_11))*/
  {
    sector = 15;
  }
  return sector;
}

static OSStatus _GetAddress(uint32_t sector, uint32_t *startAddress, uint32_t *endAddress)
{
  OSStatus err = kNoErr;
  if(sector == 0)
  {
    *startAddress = ADDR_FLASH_SECTOR_0;
    *endAddress = ADDR_FLASH_SECTOR_1 - 1;
  }
  else if(sector == 1)
  {
    *startAddress = ADDR_FLASH_SECTOR_1;
    *endAddress = ADDR_FLASH_SECTOR_2 - 1;
  }
  else if(sector == 2)
  {
    *startAddress = ADDR_FLASH_SECTOR_2;
    *endAddress = ADDR_FLASH_SECTOR_3 - 1;
  }
  else if(sector == 3)
  {
    *startAddress = ADDR_FLASH_SECTOR_3;
    *endAddress = ADDR_FLASH_SECTOR_4 - 1;
  }
  else if(sector == 4)
  {
    *startAddress = ADDR_FLASH_SECTOR_4;
    *endAddress = ADDR_FLASH_SECTOR_5 - 1;
  }
  else if(sector == 5)
  {
    *startAddress = ADDR_FLASH_SECTOR_5;
    *endAddress = ADDR_FLASH_SECTOR_6 - 1;
  }
  else if(sector == 6)
  {
    *startAddress = ADDR_FLASH_SECTOR_6;
    *endAddress = ADDR_FLASH_SECTOR_7 - 1;
  }
  else if(sector == 7)
  {
    *startAddress = ADDR_FLASH_SECTOR_7;
    *endAddress = ADDR_FLASH_SECTOR_8 - 1;
  }
  else if(sector == 8)
  {
    *startAddress = ADDR_FLASH_SECTOR_8;
    *endAddress = ADDR_FLASH_SECTOR_9 - 1;
  }
  else if(sector == 9)
  {
    *startAddress = ADDR_FLASH_SECTOR_9;
    *endAddress = ADDR_FLASH_SECTOR_10 - 1;
  }
  else if(sector == 10)
  {
    *startAddress = ADDR_FLASH_SECTOR_10;
    *endAddress = ADDR_FLASH_SECTOR_11 - 1;
  }
  else if(sector == 11)
  {
    *startAddress = ADDR_FLASH_SECTOR_11;
    *endAddress = FLASH_END_ADDRESS - 1;
  }
  else if(sector == 12)
  {
    *startAddress = ADDR_FLASH_SECTOR_12;
    *endAddress = FLASH_END_ADDRESS - 1;
  }
  else if(sector == 13)
  {
    *startAddress = ADDR_FLASH_SECTOR_13;
    *endAddress = FLASH_END_ADDRESS - 1;
  }
  else if(sector == 14)
  {
    *startAddress = ADDR_FLASH_SECTOR_14;
    *endAddress = FLASH_END_ADDRESS - 1;
  }
  else if(sector == 15)
  {
    *startAddress = ADDR_FLASH_SECTOR_15;
    *endAddress = FLASH_END_ADDRESS - 1;
  }
  else
    err = kNotFoundErr;

  return err;
}
